--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,34 +1,46 @@
-on: [push]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Build and Push Docker Image
 
+#Build, Tag and push!
     steps:
-      # Checkout the repo
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v2
 
-      # Setup Docker Buildx (optional, for advanced builds)
-     # - name: Set up Docker Buildx
-     #   uses: docker/setup-buildx-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-    # Log in to Docker Hub (optional, only if you want to push the image)
-    #- name: Log in to Docker Hub
-     # uses: docker/login-action@v2
-     # with:
-     #   username: ${{ secrets.DOCKER_USERNAME }}
-     #   password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD}}
 
-      # Build the Docker Image
-      - name: Build Docker image
-        run: docker build -t docker-demo:v1 .
+# GITHUB_SHA environment variable, which is automatically provided by GitHub Actions and contains the commit SHA.
+# Assign an ID to this step to use it later in the workflow to reference outputs from this step
+# $GITHUB_SHA is an environment varaible provided by GitHub
+# prints the full commit SHA.
+# the cut command extracts characters 1 to 7 from the full commit SHA.
+# assign the result to a new variable called "commit_sha" and the echo it.
+      - name: Extract commit SHA
+        id: vars
+        run: echo "COMMIT_SHA=$(echo $GITHUB_SHA | cut -c1-7)" >> $GITHUB_ENV
 
-      - name: Docker login
-        run: | 
-              docker login -u="${{ secrets.DOCKER_USERNAME }}" -p="${{ secrets.DOCKER_PASSWORD }}"
-              docker images
-              docker tag docker-demo:v1 iprashanth07/docker-demo:1.0.0
-              docker images
-              docker push iprashanth07/docker-demo:1.0.0
+      - name: Debug COMMIT_SHA
+        run: echo "Commit SHA is $COMMIT_SHA"
+
+      - name: Build and tag Docker image
+        run: docker build -t iprashanth07/docker-demo:$COMMIT_SHA .
+
+      - name: Push Docker image
+        run: docker push iprashanth07/docker-demo:$COMMIT_SHA
+
+    
