--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -3,10 +3,10 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - featur
+      - main
   pull_request:
     branches:
-      - featur
+      - main
 
 jobs:
   build:
