--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -7,6 +7,8 @@ on:
   pull_request:
     branches:
       - main
+env:
+  name: "Indra"
 
 jobs:
   build:
@@ -44,3 +46,12 @@ jobs:
 
       - name: Push Docker image
         run: docker push iprashanth07/helloworld-java:$COMMIT_SHA
+
+      - name: executing remote ssh commands using password
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: 157.245.126.155
+          username: root
+          key:  ${{ secrets.PRIVATE_KEY}}
+          port: 22
+          script: whoami
