Test Conn Drop -> Github

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -54,16 +54,15 @@ jobs:
           username: root
           key:  ${{ secrets.PRIVATE_KEY}}
           port: 22
-          script:
-                whoami
-                pwd
-                mkdir Github_to_Droplet
-                cd Github_to_Droplet
-                touch test.yml
-                cat <<EOF > test.yml
-                Hello! The connection from Github to Droplet is Successfull!
-                EOF
-                cat test.yml
-                docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-                docker pull iprashanth07/helloworld-java:cf366b6
-                docker run -t -d iprashanth07/helloworld-java:cf366b6
+          script: whoami
+                  pwd
+                  mkdir Github_to_Droplet
+                  cd Github_to_Droplet
+                  touch test.yml
+                  cat <<EOF > test.yml
+                  Hello! The connection from Github to Droplet is Successfull!
+                  EOF
+                  cat test.yml
+                  docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+                  docker pull iprashanth07/helloworld-java:cf366b6
+                  docker run -t -d iprashanth07/helloworld-java:cf366b6
